--- a/main.html
+++ b/main.html
@@ -10,6 +10,53 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+	<form  method ="post">
+		<table>
+			<tr>
+				<td><label for="name">Name</label></td>
+				<td><input type ="Text" id="name" Additional Requirements="Required"></td>
+			</tr>
+			<tr>
+				<td><label for="email">Email</label></td>
+				<td><input type ="Email" id="email" Requirements="Required"></td>
+			</tr>
+			<tr>
+				<td><label for="gender">Gender</label></td>
+				<td><input name="gender" type ="Radio" required="yes" id="gender_m">Male<input type ="Radio" name="gender" required="yes" id="gender_f">Female</td>
+			</tr>
+			<tr>
+				<td><label for="laptop">Laptop Brands</label></td>
+				<td><Select id="laptop"  >
+						<option value="0" selected="selected"></option>
+					<option value="1">Apple, </option>
+					<option value="2">Asus</option>
+					<option value="2">HP</option>
+				</Select>
+				</td>
+			</tr>
+	<tr>
+				<td><label for="age">Age</label></td>
+				<td><input type ="Number" id="age" Additional Requirements="Required"></td>
+	<tr>
+				<td><label for="dob">DOB</label></td>
+				<td><input type ="Date" id="dob" Additional Requirements="Required"></td>
+			</tr>
+	<tr>
+				<td><label for="password">Password</label></td>
+				<td><input type ="Password" id="password" Additional Requirements="Required"></td>
+			</tr>
+	<tr>
+				<td><label for="portfolio URL">Portfolio</td>
+				<td><input type ="URL" id="portfolio"></td>
+			</tr>
+				<tr>
+					<td colspan="2"><button type="submit">Submit</button></td>
+				</tr>
+				
+			
+		</table>
+		</form>
+
 
 </body>
 
