--- a/main.html
+++ b/main.html
@@ -14,11 +14,11 @@
 		<table>
 			<tr>
 				<td><label for="name">Name</label></td>
-				<td><input type ="Text" id="name" Additional Requirements="Required"></td>
+				<td><input type ="Text" id="name" Required></td>
 			</tr>
 			<tr>
 				<td><label for="email">Email</label></td>
-				<td><input type ="Email" id="email" Requirements="Required"></td>
+				<td><input type ="Email" id="email" Required></td>
 			</tr>
 			<tr>
 				<td><label for="gender">Gender</label></td>
@@ -26,8 +26,7 @@
 			</tr>
 			<tr>
 				<td><label for="laptop">Laptop Brands</label></td>
-				<td><Select id="laptop"  >
-						<option value="0" selected="selected"></option>
+				<td><Select id="laptop">
 					<option value="1">Apple, </option>
 					<option value="2">Asus</option>
 					<option value="2">HP</option>
@@ -36,17 +35,17 @@
 			</tr>
 	<tr>
 				<td><label for="age">Age</label></td>
-				<td><input type ="Number" id="age" Additional Requirements="Required"></td>
+				<td><input type ="Number" id="age" Required></td>
 	<tr>
 				<td><label for="dob">DOB</label></td>
-				<td><input type ="Date" id="dob" Additional Requirements="Required"></td>
+				<td><input type ="Date" id="dob" Required></td>
 			</tr>
 	<tr>
 				<td><label for="password">Password</label></td>
-				<td><input type ="Password" id="password" Additional Requirements="Required"></td>
+				<td><input type ="Password" id="password" Required></td>
 			</tr>
 	<tr>
-				<td><label for="portfolio URL">Portfolio</td>
+				<td><label for="portfolio">Portfolio</td>
 				<td><input type ="URL" id="portfolio"></td>
 			</tr>
 				<tr>
